--- a/WhatToDo.Application/ClientApp/src/app/home/home.component.html
+++ b/WhatToDo.Application/ClientApp/src/app/home/home.component.html
@@ -2,8 +2,13 @@
   <div class="row">
     <div class="col-md-6">
       <div class="input-group mb-3">
-        <input type="text" class="form-control" [(ngModel)]="createItemObj.description">
-        <span class="input-group-text" id="basic-addon2" (click)="create()">ADD NEW</span>
+        <input type="text" class="form-control" [(ngModel)]="createItemObj.description" maxlength="40">
+        <span class="input-group-text" id="basic-addon2" style="cursor: pointer;" (click)="create()">ADD NEW</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">       
+        <p class="error" [hidden]='!isDuplicate'>This item already exists in your list.</p>
       </div>
     </div>
   </div>
