--- a/WhatToDo.Application/ClientApp/src/styles.css
+++ b/WhatToDo.Application/ClientApp/src/styles.css
@@ -4,6 +4,10 @@ body {
   background-color: #006666;
 }
 
+.error{
+  color: orange;
+}
+
 .input-group-text {
   color           : white;
   background-color: teal;
