Added progress spinner

--- a/WhatToDo.Application/ClientApp/src/app/edit-item/edit-item.component.html
+++ b/WhatToDo.Application/ClientApp/src/app/edit-item/edit-item.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div> -->
-<div class="container">
+<div *ngIf="isDataLoaded" class="container">
     <div class="row">
         <div class="col-md-6">
             <ul class="list-group">
@@ -26,3 +26,5 @@
         </div>
     </div>
 </div>
+
+<app-spinner *ngIf="!isDataLoaded"></app-spinner>
