--- a/WhatToDo.Application/ClientApp/src/app/home/home.component.html
+++ b/WhatToDo.Application/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="isDataLoaded" class="container">  
   <div class="row">
     <div class="col-md-6">
       <div class="input-group mb-3">
@@ -22,3 +22,5 @@
     </div>
   </div>
 </div>
+
+<app-spinner *ngIf="!isDataLoaded"></app-spinner>
