--- a/WhatToDo.Application/ClientApp/src/app/to-do/to-do.component.html
+++ b/WhatToDo.Application/ClientApp/src/app/to-do/to-do.component.html
@@ -9,7 +9,7 @@
 
   <div *ngIf="items.length !=0">
     <li *ngFor="let item of items;" class="list-group-item py-3 d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">{{item.description}}</div>
+      <div class="ms-2 me-auto description-text">{{item.description}}</div>
       <img [hidden]="item.isCompleted" (click)="onComplete(item)" src="/assets/icons/finish-line.png" title="Complete"
         alt="" width="22" height="22" style="cursor: pointer;">
       <img [hidden]="item.isCompleted" (click)="onEdit(item.id)" src="/assets/icons/edit.png" title="Edit" class="ms-2"
